changed TD size again

--- a/assets/index.css
+++ b/assets/index.css
@@ -35,12 +35,13 @@ li {
 .TorD {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  align-items: center;
+  width: 100%;
 
 }
 
 .singleTD {
-  width: 80%;
+  width: 75%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: 5px;
 }
